option java_package = "com.hawk.game.protocol";

// struct-------------------------------------------------------


// protocol-----------------------------------------------------

// GEN_TEST_ACCOUNT
message GMGenTestAccount
{
}

// GMOPERATION_C
message GMOperation
{
	required string action = 1;
	optional string operation = 2;
	optional int64  targetId = 3;
	optional int64  value = 4;
	optional string itemID = 5;
}

// GMOPERATION_S
message GMOperationRet
{

}