import "Protocol/Role.proto";

option java_package = "com.hawk.game.protocol";

// LOGIN_C
message HSLogin
{
	required string puid = 1;
	optional string deviceId = 2 [default = "0"];
	optional string platform = 3 [default = "0"];
	optional string version = 4 [default = "0.0.1"];
	optional string token = 5;
}

// LOGIN_S
message HSLoginRet
{
	required int32 status = 1;
	required int32 playerId = 2;
	optional int32 timeStamp = 3;
}

// KICKOUT_S
message HSUserKickout
{
	required int32 playerId = 1;
	optional int32 reason = 2;	
}